test imgur api with retrofit

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -41,6 +41,13 @@
             android:text="Bmob"
             android:id="@+id/bmob"/>
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="Retrofit"
+            android:id="@+id/retrofit"/>
+
     </LinearLayout>
 
 
