--- a/app/src/main/res/layout/content_retrofit.xml
+++ b/app/src/main/res/layout/content_retrofit.xml
@@ -16,13 +16,19 @@
         android:id="@+id/ivTest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
         android:src="@android:drawable/ic_notification_clear_all"/>
 
     <TextView
         android:id="@+id/tvTest"
-        android:layout_marginTop="36dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="test"/>
+
+    <VideoView
+        android:id="@+id/vvTest"
+        android:elevation="12dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
