--- a/app/src/main/res/layout/activity_handler.xml
+++ b/app/src/main/res/layout/activity_handler.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -10,37 +11,55 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".HandlerActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:id="@+id/tvThread"
-        android:textSize="80sp"
-        android:gravity="center"
-        android:text="Thread"/>
-
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:gravity="center"
+        android:weightSum="3"
         android:orientation="horizontal">
 
-        <Button
+        <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnThread"
-            android:layout_gravity="center_vertical"
-            android:text="start"/>
+            android:layout_height="120dp"
+            android:id="@+id/tvThread"
+            android:textSize="78sp"
+            android:layout_weight="2"
+            android:gravity="center"
+            android:text="0"/>
 
-        <Button
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btnThread2"
-            android:layout_gravity="center_vertical"
-            android:text="stop"/>
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/btnThread"
+                android:layout_gravity="center_horizontal"
+                android:text="start"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/btnThread2"
+                android:layout_gravity="center_horizontal"
+                android:text="stop"/>
+        </LinearLayout>
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorPrimaryDark"/>
 
-
+    <com.wang.avi.AVLoadingIndicatorView
+        android:layout_marginTop="4dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:indicator_color="@android:color/darker_gray"
+        app:indicator="Pacman"/>
 
 </LinearLayout>
